# ha-njord

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  commitlint.config.mjs  docker-compose.yml  hacs.json  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
custom_components/njord/: __init__.py  binary_sensor.py  condition_mapper.py  config_flow.py  const.py  coordinator.py  grpc_client.py  manifest.json  models.py  sensor.py  strings.json  weather.py
custom_components/njord/proto/: __init__.py
custom_components/njord/translations/: de.json
openspec/: config.yaml
openspec/specs/alert-sensors/: spec.md
openspec/specs/alert-trigger-values/: spec.md
openspec/specs/condition-mapping/: spec.md
openspec/specs/config-flow/: spec.md
openspec/specs/consensus-weather/: spec.md
openspec/specs/dynamic-entity-creation/: spec.md
openspec/specs/enrichment-alerts/: spec.md
openspec/specs/enrichment-merge/: spec.md
openspec/specs/enrichment-sensors/: spec.md
openspec/specs/extra-forecast-parameters/: spec.md
scripts/: setup-hacs.sh
tests/: conftest.py  test_binary_sensor.py  test_condition_mapper.py  test_config_flow.py  test_coordinator.py  test_coordinator_streaming.py  test_dynamic_entities.py  test_enrichment_merge.py  test_enrichment_models.py  test_grpc_client.py  test_init.py  test_init_streaming.py  test_models.py  test_proto_import.py  test_sensor.py  test_weather.py
(+10 files in other folders)
