[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-njord"
version = "0.1.0"
description = "Home Assistant custom integration for njord weather service"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "st0o0" }]
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "grpcio-tools>=1.60.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
